Issue The image editor is not responsive: - minor change

--- a/src/main/webapp/imcms/css/imcms-head.css
+++ b/src/main/webapp/imcms/css/imcms-head.css
@@ -30,7 +30,7 @@
 	text-transform: uppercase;
 	width: 94%;
 	display: inline-flex;
-	justify-content: space-around;
+	justify-content: center;
 }
 
 .imcms-head__toolbar,
